--- a/css/styles.css
+++ b/css/styles.css
@@ -1,129 +1,101 @@
-
 /* jumbotron
 ======================*/
-
 .jumbotron {
   margin: 0 auto;
   background: #fff;
-  color: #000;
-}
+  color: #000; }
 
 .container .jumbotron {
-  padding: 50px 0 0;
-}
+  padding: 50px 0 0; }
 
 /* images
 ======================*/
-
 .lead + img {
   box-shadow: 0 20px 20px #acacac;
-  padding: 0;
-}
+  padding: 0; }
 
 /* Layout
 ======================*/
-
 .container {
   max-width: 1000px;
   padding-right: 0;
-  padding-left: 0;
-}
+  padding-left: 0; }
 
 .container:first-child {
   padding-right: 0;
-  padding-left: 15px;
-}
+  padding-left: 15px; }
 
 .navbar-default {
   background-color: #fff;
-  border-bottom: 1px solid #000;
-}
+  border-bottom: 1px solid #000; }
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar a.navbar-brand:hover {
   background: #000;
-  color: #fff;
-}
+  color: #fff; }
 
 .middle-content,
 .current-events,
 .main-footer {
-  padding-top: 52px;
-}
+  padding-top: 52px; }
 
 .first-coffee-pic {
-  padding-top: 22px;
-}
+  padding-top: 22px; }
 
 .main-about-link {
-  margin: 55px 0 4px;
-}
+  margin: 55px 0 4px; }
 
 .current-events {
-  margin-bottom: 42px;
-}
+  margin-bottom: 42px; }
 
 label[for="name"],
 label[for="email"] {
-	margin-top: 20px;
-}
+  margin-top: 20px; }
 
 #email {
-	width: 75%;
-}
+  width: 75%; }
 
 .main-footer {
-  margin-bottom: 22px;
-}
+  margin-bottom: 22px; }
 
 .lab {
-  padding-bottom: 52px;
-}
-
+  padding-bottom: 52px; }
 
 .bean {
-  padding-top: 18px;
-}
+  padding-top: 18px; }
 
 input[name="name"],
 input[name="email"],
 textarea {
-  width: 100%;
-}
+  width: 100%; }
 
 textarea.form-control {
   height: 266.094px;
-  margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 
-address  {
-  margin-bottom: 25px;
-}
+address {
+  margin-bottom: 25px; }
 
 .contact p.lead {
   margin-bottom: 3px;
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 .contact .btn {
   position: static;
   width: 100%;
-  margin-top: -40px
-}
+  margin-top: -40px; }
 
 /* Buttons & Form
 ======================*/
-
 .foot-img {
-	width: 32px;
-	height: 32px;
-	margin-right: 8px;
-}
+  width: 32px;
+  height: 32px;
+  margin-right: 8px; }
+
 input[type="text"],
 input[type="email"] {
   border: 1px solid #000;
-  color: #000;
-}
+  color: #000; }
 
 .btn {
   position: relative;
@@ -131,162 +103,131 @@ input[type="email"] {
   left: 78.75%;
   padding: 6px 10px;
   background: #000;
-  color: #fff;
-}
+  color: #fff; }
 
 .btn-default:hover {
   background: #fff;
-  color: #000;
-}
+  color: #000; }
 
 /* Typography
 ======================*/
-
 a {
-  transition: .7s;
-}
+  transition: .7s; }
 
 .main-font {
-  font-family: m-1m;
-}
+  font-family: m-1m; }
 
 .navbar a.navbar-brand {
   padding-left: 15px;
   font-size: 32px;
   font-weight: 100;
-  color: #000;
-}
+  color: #000; }
 
 ul.nav a {
   font-weight: 200;
   letter-spacing: 2px;
-  color: #000;
-}
+  color: #000; }
 
 .navbar-default .navbar-nav > li > a.active {
   color: #fff;
-  background: #000;
-}
+  background: #000; }
 
 li {
-  list-style: none;
-}
+  list-style: none; }
 
 .jumbotron > h1 {
   font-size: 54px;
   font-weight: 700;
-  padding-bottom: 20px;
-}
+  padding-bottom: 20px; }
 
 p.lead {
   font-size: 20px;
   font-weight: 100;
   letter-spacing: 1px;
   line-height: 1.75;
-  margin-bottom: 52px;
-}
+  margin-bottom: 52px; }
 
 h4 {
   padding: 10px 0;
   font-size: 18px;
   border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
-}
+  border-bottom: 1px solid #000; }
 
 h2 {
   font-size: 38px;
-  margin-bottom: 28px;
-}
+  margin-bottom: 28px; }
 
 .brand {
   font-weight: 100;
-  font-size: 24px;
-}
+  font-size: 24px; }
 
 .brand:hover {
   font-size: 25px;
   text-decoration: none;
   padding-bottom: 1px;
-  border-bottom: 1px solid #337ab7;
-}
+  border-bottom: 1px solid #337ab7; }
 
 .current-events h2,
 .main-footer h2 {
   margin-top: 0;
   margin-bottom: 0;
-  padding-bottom: 30px;
-}
+  padding-bottom: 30px; }
 
 .event-header h3 {
   font-size: 28px;
-  margin-bottom: 24px;
-}
+  margin-bottom: 24px; }
 
 .events p.lead {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .events .brand {
   display: inline-block;
   margin: 20px 0 0;
-  line-height: 1.23;
-}
+  line-height: 1.23; }
 
 small a {
-	font-weight: 100;
-	color: #000;
-}
+  font-weight: 100;
+  color: #000; }
 
 .main-footer h3 {
-	font-size: 22px;
-}
+  font-size: 22px; }
 
 .adr-hours h3 {
-	margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
-.main-footer p.lead  {
-	font-size: 18px;
-}
+.main-footer p.lead {
+  font-size: 18px; }
 
 p.foot-lead.lead {
-	margin-bottom: 25px;
-}
+  margin-bottom: 25px; }
 
 .social-media .foot-lead {
-	margin-top: 18px;
-}
+  margin-top: 18px; }
 
 .social-media a.brand {
-	display: inline-block;
+  display: inline-block;
   margin-bottom: 12px;
   font-size: 20px;
   font-weight: 100;
-  color: #000;
-  &:hover {
-    font-weight: 200;
-  }
-}
+  color: #000; }
+  .social-media a.brand:hover {
+    font-weight: 200; }
 
 .social-media a.brand:hover {
-	border: none;
-}
+  border: none; }
 
 label {
-  font-size: 18px;
-}
+  font-size: 18px; }
 
 .glyphicon-tint:first-of-type {
   font-size: 100px;
   padding-top: 0px;
-  text-shadow: -90px 60px 0px #333;
-}
+  text-shadow: -90px 60px 0px #333; }
 
 .glyphicon-tint:last-of-type {
   font-size: 100px;
   padding-top: 0px;
-  text-shadow: 90px 60px 0px #333;
-}
+  text-shadow: 90px 60px 0px #333; }
 
 .sustain {
   background: url("https://images.unsplash.com/photo-1445883791079-421522d11f18?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=8dd0ffc45eb5acb2b6c36c029974dd78") no-repeat center;
@@ -294,121 +235,101 @@ label {
   border-radius: 6px;
   margin-top: 52px;
   padding: 0px 20px;
-  color: #fff;
-}
+  color: #fff; }
 
 .sustain h2 {
   padding: 22px 0 52px;
-  margin-bottom: 26px;
-}
+  margin-bottom: 26px; }
 
 .sustain h2:last-of-type {
-  padding: 0px;
-}
+  padding: 0px; }
 
 .contact h3 {
-  margin-bottom: 21px;
-}
+  margin-bottom: 21px; }
 
 /* Products Page
 ======================*/
-
 .coffee-products,
 .tea-products {
-  margin-bottom: 62px;
-  h2 {
-    font-size: 40px;
-  }
-}
+  margin-bottom: 62px; }
+  .coffee-products h2,
+  .tea-products h2 {
+    font-size: 40px; }
 
-.coffee-description {
-  h3 {
-    font-size: 32px;
-    padding-bottom: 20px;
-  }
-}
+.coffee-description h3 {
+  font-size: 32px;
+  padding-bottom: 20px; }
 
 .tea {
-  padding-top: 52px;
-}
+  padding-top: 52px; }
 
 .back-to-top {
-  text-align:  center;
-}
+  text-align: center; }
 
 .back-to-top p.lead {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .back-to-top a:hover {
   padding-bottom: 1px;
   text-decoration: none;
-  border-bottom: 1px solid #337ab7;
-}
+  border-bottom: 1px solid #337ab7; }
 
 /* Media Query
 ======================*/
-
 @media (max-width: 1199px) {
   .first-coffee-pic > img {
-    height: 300px;
-  }
-  .btn {
-    left: 77.75%;
-  }
-}
+    height: 300px; }
 
+  .btn {
+    left: 77.75%; } }
 @media (max-width: 991px) {
   .jumbotron h1 {
-    font-size: 42px;
-  }
+    font-size: 42px; }
+
   p.lead {
     font-size: 22px;
-    margin-bottom: 38px;
-  }
+    margin-bottom: 38px; }
+
   h2 {
-    font-size: 40px;
-  }
+    font-size: 40px; }
+
   .main-about-link {
-    margin: 35px 0 4px;
-  }
+    margin: 35px 0 4px; }
+
   .current-events {
-    margin-bottom: 0;
-  }
+    margin-bottom: 0; }
+
   .events .brand {
-    margin-bottom: 22px;
-  }
+    margin-bottom: 22px; }
+
   .current-events:last-of-type {
-    border: none;
-  }
+    border: none; }
 
   .adr-hours,
   .social-media {
-  margin-left: 8.33333333%;
-}
+    margin-left: 8.33333333%; }
+
   .adr-hours p.lead,
   .social-media .foot-lead,
   label[for="name"],
   label[for="email"] {
-    margin-top: 2px;
-  }
+    margin-top: 2px; }
+
   .social-media a.brand {
-    margin-bottom: 16px;
-  }
+    margin-bottom: 16px; }
+
   label {
-    font-size: 16px;
-  }
+    font-size: 16px; }
+
   #email {
-    width: 100%;
-  }
+    width: 100%; }
+
   .btn {
     position: static;
-    margin-top: 16px;
-  }
-}
-  @media (max-width: 767px) {
-    .container {
+    margin-top: 16px; } }
+@media (max-width: 767px) {
+  .container {
     padding-left: 15px;
-    padding-right: 15px;
-  }
-}
+    padding-right: 15px; } }
+
+/*# sourceMappingURL=styles.css.map */
