--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,15 @@
   background: #000;
   color: #fff; }
 
+.navbar i {
+  font-size: 20px;
+  padding-right: 15px;
+  position: relative;
+  top: 20px; }
+  @media only screen and (min-width: 781px) {
+    .navbar i {
+      display: none; } }
+
 .middle-content,
 .current-events,
 .main-footer {
@@ -71,6 +80,7 @@ textarea {
 
 textarea.form-control {
   height: 266.094px;
+  border: 1px solid #000;
   margin-bottom: 30px; }
 
 address {
@@ -123,10 +133,18 @@ a {
   font-weight: 100;
   color: #000; }
 
+.navbar-nav {
+  display: none;
+  margin: 10px  32px 0 0; }
+  @media only screen and (min-width: 782px) {
+    .navbar-nav {
+      display: inline-block;
+      margin: 0; } }
+
 ul.nav a {
+  color: #000;
   font-weight: 200;
-  letter-spacing: 2px;
-  color: #000; }
+  letter-spacing: 2px; }
 
 .navbar-default .navbar-nav > li > a.active {
   color: #fff;
