--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ a {
 
 .navbar-nav {
   display: none;
-  margin: 10px  32px 0 0; }
+  margin: 0; }
   @media only screen and (min-width: 782px) {
     .navbar-nav {
       display: inline-block;
