Updated menu functionality for each page

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,13 +34,16 @@
   background: #000;
   color: #fff; }
 
-.navbar i {
+.navbar .menu-open,
+.navbar .menu-close {
+  cursor: pointer;
   font-size: 20px;
-  padding-right: 15px;
+  padding: 0 0 20px 20px;
   position: relative;
   top: 20px; }
   @media only screen and (min-width: 781px) {
-    .navbar i {
+    .navbar .menu-open,
+    .navbar .menu-close {
       display: none; } }
 
 .middle-content,
@@ -135,7 +138,8 @@ a {
 
 .navbar-nav {
   display: none;
-  margin: 0; }
+  margin: 0;
+  text-transform: uppercase; }
   @media only screen and (min-width: 782px) {
     .navbar-nav {
       display: inline-block;
